# MultiscaleRun

./: .gitignore  README.md  pyproject.toml  setup.sh  tox.ini
.ci/: setup.sh
.github/workflows/: integration_tests.yml  lint.yml  publish.yml  unit_tests.yml
ci_old/.ci/: test_init_julia_create.sh  test_integration.sh  test_pytest.sh
ci_old/workflows/: check-packaging.yml  publish.yml
docs/: contributing.rst
multiscale_run/: bloodflow_manager.py  cli.py  config.py  connection_manager.py  metabolism_manager.py  neurodamus_manager.py  preprocessor.py  reporter.py  simulation.py  steps_manager.py  utils.py
multiscale_run/metabolism/: ODE_system.jl  ODE_system_aged.jl  ODE_system_young.jl  constants.py  indexes.py  initial_conditions.py  model.py  old_idxs.py
multiscale_run/templates/: __init__.py  msr.schema.json  postproc.ipynb
multiscale_run/templates/tiny_CI/: simulation_config.json
old/.ci/: setup.sh  test_simulation.sh
tests/integration/: autogen_mesh.py  connect_neurodamus2steps.py  preprocessor.py
tests/metabolism/: py_jl_tests.ipynb
tests/pytests/: test_cli.py
tests/pytests_old/: test_metabolism.py  test_steps.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_metab_solver.py  test_preprocessor.py  test_reporter.py  test_utils.py
tests/unit/test_folder/: simulation_config.json
