[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4",
    "wheel>=0.41",
]

[tool.setuptools.packages.find]
include = ["multiscale_run*"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::scipy.sparse.SparseEfficiencyWarning",
]

[project]
name = "multiscale_run"
authors = [
    {name = "Blue Brain Project, EPFL"}
]
maintainers = [
  { name = "Open Brain Institute" }
]
description = """
    MultiscaleRun is a Python package to run brain cells simulation at different scales. \
    It orchestrates the coupling between several brain simulators like Neuron and \
    STEPS but also solvers like AstroVascPy for the cerebral blood flow. \
    The package also embeds a Julia solver to simulate the astrocytes activity. \
    """
readme = "README.md"
requires-python = ">=3.8"
license = {text = "LGPLv3"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    # "astrovascpy>=0.1.5",
    "diffeqpy>=1.1",
    # "gmsh>=4.2",
    # "jinja2>=3",
    # "jsonschema>=4",
    "julia>=0.6, <0.7",
    "libsonata>=0.1.20",
    "mpi4py>=3",
    "notebook>=6",
    "numpy>=1.22",
    "pandas>=1.4",
    "psutil>=5.8",
    "scipy>=1.11.1",
    "simpleeval>=0.9.13",
    "tqdm>=4.65",
    # "trimesh>=3",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "mistune<3",
    "sphinx",
    "sphinx-bluebrain-theme",
    "sphinx-mdinclude",
]
test = [
    "pytest",
]

[project.scripts]
multiscale-run = "multiscale_run.cli:main"

[project.urls]
Homepage = "https://multiscalerun.rtfd.io"
Source = "https://github.com/openbraininstitute/MultiscaleRun.git"
Tracker = "https://github.com/openbraininstitute/MultiscaleRun/issues"

[tool.ruff]
# Same as Black.
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["F401", "F403", "F405", "E741", "E721"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
